# get_voc.rs

./: Cargo.toml  README.md  get_voc.py
benches/: hyperfine.sh
src/: lib.rs  main.rs
