[package]
name = "get_voc"
version = "0.1.0"
authors = ["Samuel Larkin <Samuel.Larkin@cnrc-nrc.gc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
counter = "0.5.2"
regex = "1.5.4"
