[package]
authors = ["Samuel Larkin <Samuel.Larkin@cnrc-nrc.gc.ca>"]
categories = [ "command-line-utilities", "library" ]
description = "A CLI tool to get a vocabulary count"
edition = "2021"
keywords = [ "NLP", "CLI" ]
name = "get_voc"
readme = "README.md"
repository = "https://github.com/SamuelLarkin/get_voc.rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
counter = "0.5.2"
regex = "1.5.4"

[[bin]]
name = "get_voc_rs"
path = "src/main.rs"

[lib]
name = "get_voc"
path = "src/lib.rs"
